--- a/index.html
+++ b/index.html
@@ -348,7 +348,8 @@
       resize: vertical;
       min-height: 240px;
       line-height: 1.6;
-      font-family: 'SF Mono', 'Monaco', 'Cascadia Code', monospace;
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      font-size: 14px;
     }
 
     /* Toggle Switch */
